--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,12 @@
 .backimage {
     position: relative;
-    width: 98vw;
-    height: 100vw;
+    width: 99vw;
+    height: 160vh;
   }
 
   .imgtxt {
     position: absolute;
-    top: 12vw;
+    top: 30vh;
     left: 65vw;
     text-align: center;
     color: white;
@@ -16,7 +16,7 @@
 
   .letsroll {
     position: absolute;
-    top: 70vw;
+    top: 130vh;
     left: 10vw;
     border: 4px solid;
     border-radius: 10px;
@@ -25,17 +25,13 @@
     font-size: 5vw;
   }
   
-  ,.letsroll:hover{
-    transform: scale(0.1);
-  }
-
   .letsroll a {
     color: white;
   }
 
   .aboutpage {
     position: absolute;
-    top: 70vw;
+    top: 130vh;
     left: 60vw;
     border: 4px solid;
     border-radius: 10px;
@@ -46,3 +42,4 @@
 
   .aboutpage a {
     color: white;
+  }
