--- a/css/index.css
+++ b/css/index.css
@@ -1,52 +1,142 @@
-body{
-  margin:0;
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+    color: white;
 }
 
-.backimage {
-  position: relative;
-  width: 100%;
-  height: 160vh;
+
+/*------ navigation bar ------*/
+.navbar{
+    background-color: #1d2731;
+    width:100%;
+    height:60px;
+    display: flex;
+    align-items: center;
+    position:sticky;
+    top:0;
+    z-index:1;
+    font-family: monospace;
+    font-size: 1rem;
 }
 
-.imgtxt {
-  position: absolute;
-  top: 14vh;
-  left: 65vw;
+.container {
+    width:90%;
+    margin:0 auto;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
+h1 {
+    color:#d9b310;
+}
+
+ul {
+    list-style-type: none;
+    overflow: hidden;
+}
+
+li{
+    float:left;
+}
+
+li a {
+    display: block;
+    padding:1rem 1rem;
+    text-align: centre;
+    text-decoration: none;
+  }
+li a:hover{
+    background-color: rgb(172, 127, 68);
+    color:whitesmoke
+}
+
+li a:active, a:focus {
+    outline: 0;
+    border: none;
+    outline-style: none;
+    -moz-outline-style: none;
+}
+
+/*----navigation bar end-----*/
+
+/*----main pic-----*/
+.center-img {
+    min-height: calc(100vh - 60px);
+    background: url("../images/maxresdefault.jpg") center/cover no-repeat;
+}
+
+.container-imgtxt{
+    min-height: calc(100vh - 60px);
+    background-color: rgba(29,39,49,0.8);
+    text-transform: uppercase;
+    text-align: center;
+    font-family: monospace;
+}
+
+.container-imgtxt p {
+    margin:0 auto;
+    padding: 15% 0;
+    font-size: 7rem;
+    font-family: 'Special Elite', cursive;
+}
+/*-----main pic end -----*/
+
+
+
+/*-----3 sections ----*/
+.colms3 {
+    height:50vh;
+    display: flex;
+}
+
+.colms3 div {
+    width:34%;
+  font-family: monospace;
   text-align: center;
-  color: white;
-  font-family: 'Special Elite', cursive;
-  font-size: 4.5vw;
+  background-color: rgb(11,60,93);
 }
 
-.letsroll {
-  position: absolute;
-  top: 130vh;
-  left: 10vw;
-  border: 4px solid;
-  border-radius: 10px;
-  padding: 20px;
-  font-family: 'Special Elite', cursive;
-  font-size: 5vw;
+.colms3 div h4{
+    color:#d9b310;
+    font-size: 1.2rem;
+    padding:4rem 0 1rem 0;
 }
 
-.letsroll a {
-  color: white;
-  text-decoration: none;
+.colms3 div p{
+    font-size: 1rem;
 }
 
-.aboutpage {
-  position: absolute;
-  top: 130vh;
-  left: 60vw;
-  border: 4px solid;
-  border-radius: 10px;
-  padding: 20px;
-  font-family: 'Special Elite', cursive;
-  font-size: 5vw;
+.colms3 div a{
+    text-decoration: none;
 }
 
-.aboutpage a {
-  color: white;
-  text-decoration: none;
+.colms3 div a:hover h4 {
+    color: white;
 }
+
+
+
+
+
+
+
+/*-----end of 3 sections ----*/
+
+/*-----Media query----*/
+
+@media(max-width:400px) {
+    .navbar {
+        height:80px;
+    }
+    li{
+        float: none;
+    }
+    li a {
+        padding: 0;
+    }
+}
+
+/*-----End of Media query----*/
